# noir-messenger

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  noir-messenger.kdev4
.github/workflows/: build-android.yml  build-client.yml  build-desktop.yml
client/: CMakeLists.txt  main.cpp  resources.qrc  themes.qrc
client/assets/themes/: Dark.json  Light.json
client/include/core/models/: server_profile.hpp
client/include/core/storage/: server_repository.hpp
client/qml/: Chat.qml  Home.qml  Main.qml  Settings.qml
client/qml/components/: Bar.qml  Card.qml  Plash.qml
client/qml/controls/: IconButton.qml
client/qml/widgets/: Servers.qml
client/source/core/storage/: server_repository.cpp
client/template/: servers.json
source/: CMakeLists.txt
source/desktop/: CMakeLists.txt  Main.cpp  resources.qrc
source/desktop/qml/: Chat.qml  Home.qml  Main.qml
source/desktop/qml/components/: AppBar.qml  Bar.qml
source/desktop/qml/controls/: ChatItem.qml
